style.css
/* home hero */

.section.home-hero {
    height: calc(100vh - 8rem);
}

@media (min-width: 768px) {
    .section.home-hero {
        height: calc(100vh - 10rem);
    }
}

@media (min-width: 992px) {
    .section.home-hero {
        height: calc(100vh - 12rem);
    }

}

/* sidebar scrolling */

@media (min-width: 768px) {
    .sidebar {
        max-height: calc(100vh - 10rem);
    }
}

@media (min-width: 992px) {
    .sidebar {
        max-height: calc(100vh - 12rem);
    }

}

/* accordion-content width */

.accordion-content {
        width: 100% !important;
}

/* dropdown scrolling */

.dropdown-content {
        max-height: calc(100vh - 6.5rem);
}

@media (min-width: 768px) {
    .dropdown-content {
        max-height: none;
    }

}

/* text selection */

::selection {
    color: var(--surface-canvas-light);
    background-color: var(--highlight-light);
}

::-moz-selection {
    color: var(--surface-canvas-light);
    background-color: var(--highlight-light);
}

/* nav logo */

.nav-container.brand:hover .nav-logo.badge,
.nav-container.brand:focus .nav-logo.badge {
    color: var(--interactive-default-light);
}

.nav-container.brand:active .nav-logo.badge {
    color: var(--interactive-active-light);
}

/* cards */

.card .button::before {
    content: "";
    inset: 0;
    overflow: hidden;
    position: absolute;
    z-index: 1;
}

/* hr */

hr {
    margin: 0;
    border: 0.125rem solid var(--border-light);
    border-right: none;
    border-bottom: none;
    border-left: none;
    margin: 0.9375rem 0 0.9375rem 0;
}

@media (min-width: 768px) {
    .hr {
        margin-top: 1.4375rem;
        margin-bottom: 1.4375rem;
    }
}

@media (min-width: 992px) {
    .hr {
        margin-top: 1.9375rem;
        margin-bottom: 1.9375rem;
    }

}

/* textarea */

    textarea {
    resize: vertical;
}

/* external links */

a.link-external:after {
    content: '';
    mask: url("data:image/svg+xml;charset=UTF-8, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' %3E%3Cpath d='M0 12V0h4v2H2v8h8V8h2v4H0Zm5.918-4.668-1.25-1.25L8.75 2H6V0h6v6h-2V3.25L5.918 7.332Z'/%3E%3C/svg%3E");
    display: inline-block;
    width: .75rem;
    height: .75rem;
    background-color: var(--text-light);
    margin-left: 0.25rem;
    position: relative;
    top: 0.125rem;
}

a.link-external:hover:after {
    background-color: var(--interactive-default-light);
}

/* prize table */

.table-prizes {
    width: 100%;
}

.table-prizes tr {
    border-bottom: 1px solid var(--border-light);
}

.table-prizes td.winner {
    width: 30%;
    padding: 1rem 0 .9375rem;
    font-weight: 600;
}

.table-prizes td.prize {
    padding: 1rem 0 .9375rem;
    text-align: right;
}

/* event times table */

.table-event-times {
    width: 100%;
}

.table-event-times tr {
    height: 3rem;
    border-bottom: 1px solid var(--border-light);
}

.table-event-times td.time {
    text-align: right;
    width: 15%;
    font-weight: 600;
}

.table-event-times td.event {
    padding-left: 2rem;
}

/* video */

@media screen and (max-width: 767px) {

    .video {
        height: calc(((100vw - 2rem) / 16) * 9);
    }

    .video._4-3 {
        height: calc(((100vw - 2rem) / 4) * 3);
    }

}

/* photo */

@media screen and (max-width: 767px) {

    .slider-mask,
    .slider-navigation {
        height: calc(((100vw - 2rem) / 3) * 2);
    }

}

/* sponsor */

@media screen and (max-width: 767px) {

    .sponsor-logo {
        height: calc((100vw - 7rem) / 2);
    }

}

/* slider-navigation */

.slider-navigation:hover .button,
.slider-navigation:focus .button {
    background-color: var(--interactive-default-light);
    color: var(--surface-canvas-light);
}

.slider-navigation:active .button {
    background-color: var(--interactive-active-light);
    color: var(--surface-canvas-light);
}

.w-slider-arrow-left,
.w-slider-arrow-right {
    color: inherit;
    width: auto;
}

/* slider-pagination */

.w-slider-dot {
    width: 1rem;
    height: 1rem;
    margin: 0 !important;
    background: none;
    border-color: var(--interactive-default-light);
    border-style: solid;
    border-width: var(--_measurement---stroke--base);
    transition: all 0s;
}

.w-slider-dot::before {
    content: "";
    display: block;
    position: absolute;
    top: var(--_measurement---stroke--base);
    right: var(--_measurement---stroke--base);
    bottom: var(--_measurement---stroke--base);
    left: var(--_measurement---stroke--base);
    transition: all 0s;
}

.w-slider-dot:hover::before,
.w-slider-dot:focus::before {
    background-color: var(--interactive-default-light);
}

.w-slider-dot:focus,
.w-slider-dot:active {
    box-shadow: none !important;
}

.w-slider-dot:active {
    border-color: var(--interactive-active-light);
}

.w-slider-dot:active::before {
    background-color: var(--interactive-active-light);
}

.w-slider-dot.w-active {
    background: none;
}

.w-slider-dot.w-active:active {
    border-color: var(--interactive-default-light);
}

.w-slider-dot.w-active::before {
    background-color: var(--text-light);
}

/* lightbox scrim */

.w-lightbox-backdrop {
    background-color: var(--scrim);
    backdrop-filter: grayscale(100%);
    -webkit-backdrop-filter: grayscale(100%);
}

/* lightbox */

.w-lightbox-backdrop {
    color: inherit;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    font-weight: inherit;
    white-space: inherit;
    overflow: inherit;
}

.w-lightbox-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    grid-row-gap: 2vh;
}

.w-lightbox-view {
    height: 100% !important;
}

.w-lightbox-view::before {
    display: none;
}

/* lightbox controls */

.w-lightbox-control {
    width: 4rem;
    color: var(--interactive-default-light);
    font-family: 'material icons';
    font-size: 1.5rem;
    line-height: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.w-lightbox-inactive {
    display: none !important;
}
/* ... */

